almost done, just need to fix getAll